--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 7 Sept 1994</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> github.io</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> faheembhatti.github.io</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +49-178-2148994</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Chemnitz, Germany</li>
                 </ul>
