--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Core Java <i class="val">90%</i></span>
+              <span class="skill">Languages (Java , Python , c# , Bash) <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -255,9 +255,9 @@
                 <li>Automate creation of PKI (Public key infrastructure) via scripting in bash and python</li>
                 <li>Develop test tool framework for established TLS implementation in Java</li>
                 <li>Docker container for software deployment</li>
-		<li>Unit and integration testing</li>
-		<li>Processing tickets with Jira</li>
-		<li>Documentation</li>
+		            <li>Unit and integration testing</li>
+		            <li>Processing tickets with Jira</li>
+		            <li>Documentation</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -269,7 +269,7 @@
                 <li>Management of campany's internal certificate authority </li>
                 <li>Network testing based upon load testing</li>
                 <li>Support development team with system updation</li>
-		<li>Documentation</li>
+	            	<li>Documentation</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -286,7 +286,7 @@
             </div>
           </div>
         </div>
-	</div>
+  	</div>
     </section>
 	
 
