--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills & Interests" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -126,21 +126,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Languages (Java , Python , c# , Bash) <i class="val">90%</i></span>
+              <span class="skill">LANGUAGES (JAVA, PYTHON, C#, JAVASCRIPT, BASH) <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Spring boot <i class="val">80%</i></span>
+              <span class="skill">Server Tech (LINUX, UNIX) <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
            <div class="progress">
-              <span class="skill">Bash Scripting <i class="val">80%</i></span>
+              <span class="skill">DEVOPS (DOCKER, KUBERNETES, JENKINS ) <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -149,14 +149,14 @@
 
 
             <div class="progress">
-              <span class="skill">Python <i class="val">70%</i></span>
+              <span class="skill">CLOUD HOSTING (AMAZON WEB SERVICES, OPEN TELEKOM CLOUD) <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">NATURAL LANGUAGE PROCESSING (SPACY, NLTK) <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -167,7 +167,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PostgreSQL <i class="val">70%</i></span>
+              <span class="skill">DATABASES (SQL, MongoDB) <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -181,7 +181,7 @@
             </div>
 
            <div class="progress">
-              <span class="skill">Machine Learning <i class="val">70%</i></span>
+              <span class="skill">TRAVELING <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -189,7 +189,7 @@
 
 
             <div class="progress">
-              <span class="skill">C/C++ <i class="val">65%</i></span>
+              <span class="skill">CYCLING <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
