--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Linux <i class="val">90%</i></span>
+              <span class="skill">BACKEND TECHNOLOGIES (REST, SOAP) <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
            <div class="progress">
-              <span class="skill">TRAVELING <i class="val">70%</i></span>
+              <span class="skill">SECURITY & MONITORING(TLS, TLS-ATTACKER, OPENSSL, BOUNCYCASTLE, ISTIO, PROMETHEUS) <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -189,7 +189,7 @@
 
 
             <div class="progress">
-              <span class="skill">CYCLING <i class="val">65%</i></span>
+              <span class="skill">DOCUMENTATION (LATEX, WORD, CONFLUENCE) <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
