--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">VERSION CONTROL SYSTEM(GIT) <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
 
             <div class="progress">
               <span class="skill">DOCUMENTATION (LATEX, WORD, CONFLUENCE) <i class="val">65%</i></span>
