updation in the portfolio

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 7 Sept 1994</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> faheembhatti.github.io</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +49-178-2148994</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Chemnitz, Germany</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 0049-176-83120881</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mannheim, Germany</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 26</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master's</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> mefaheemazfar@gmail.com</li>
                 </ul>
               </div>
@@ -232,7 +232,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master in automotive software engineering</h4>
-              <h5>2018 - cont..</h5>
+              <h5>2018 - 2023</h5>
               <p><em>Technical University of Chemnitz, Chemnitz, DE</em></p>             
            </div>
             <div class="resume-item">
@@ -250,9 +250,24 @@
               <h5>2010 - 2012</h5>
               <p><em>Fauji Foundation College, Rawalpindi, PK</em></p>
             </div>
-	</div>
+	      </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Senior Software Engineer</h4>
+              <h5>Jun-2022 - Cont..</h5>
+              <p><em>OLI Systems GmbH, Stutgart, DE </em></p>
+              <ul>
+                <li>Identified and analyzed business, assets, and security-critical work areas for company’s EV’s charging solution, facilitating strategic decision-making and risk mitigation.</li>
+                <li>Developed applications and services using Java Spring Boot and Python Flask, contributing to the innovation and functionality of Oli Move's EV charging platform.</li>
+                <li>Orchestrated the deployment of applications and services utilizing Jenkins and Helm charts in the Kubernetes (k8s) cloud engine, ensuring efficient and scalable operations.</li>
+                <li>Successfully migrated the Jenkins server from a virtual machine (VM) to k8s, resulting in cost reduction and improved infrastructure management.</li>
+		            <li>Implemented measures such as autoscaler, service mesh, and API gateway deployments to ensure the availability and performance of EV charging services.</li>
+		            <li>Conducted cost and feature analysis for both open-source and proprietary Identity and Access Management (IAM) solutions.</li>
+		            <li>Established and maintained the confidentiality of information by setting up Key cloak in the k8s cloud engine, enhancing security protocols for charging infrastructure.</li>
+                <li>Documented processes, configurations, and best practices using Confluence and Latex, providing comprehensive documentation to support ongoing development and maintenance.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Software Engineer (Intern)</h4>
               <h5>Oct-2019 - April-2020</h5>
@@ -316,7 +331,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Dresdner str.18, 09111, Chemnitz, DE</p>
+                <p>Weylstraße 27, 68167, Mannheim, DE</p>
               </div>
 
               <div class="email">
@@ -328,9 +343,10 @@
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+49 178 2148 994</p>
+                <p>0049-176-83120881</p>
               </div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d161309.0761505176!2d12.750891388685375!3d50.82274823625453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a7465f01fd9de9%3A0x51ddf8280975d11c!2sChemnitz!5e0!3m2!1sen!2sde!4v1604172799136!5m2!1sen!2sde" frameborder="0" style="border:0; width:100%; height: 290px;"allowfullscreen></iframe> 
+              
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2591.2263196233152!2d8.490255076704715!3d49.49911997142626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797ce862e60f2f7%3A0x146aacd48c9086cb!2sWeylstra%C3%9Fe%2024%2C%2068167%20Mannheim%2C%20Germany!5e0!3m2!1sen!2s!4v1728759680857!5m2!1sen!2s" frameborder="0" style="border:0; width:100%; height: 290px;"allowfullscreen></iframe> 
            </div>
 
           </div>
