--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
               <h4>Faheem Azfar Bhatti</h4>
               <p><em>Innovative and deadline-driven Software Engineer with 1.5 years of experience designing and developing software solution from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Dresdner Str.18, 09111, Chemnitz, Germany </li>
-                <li>(0049) 178-2148-994</li>
+                <li>Weylstraße 27, 68167, Mannheim, Germany </li>
+                <li>(0049) 176-8312-0881</li>
                 <li>mefaheemazfar@gmail.com</li>
               </ul>
             </div>
